[tool.poetry]
name = "cache-geocode-service"
version = "0.1.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1"
Flask-SQLAlchemy = "^3.1"
psycopg2 = "^2.9"
requests = "^2.32"
gunicorn = "^23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
